Fix margin spacing error caused by Comment reply-list button.

--- a/src/app/components/comments/comment/comment.component.scss
+++ b/src/app/components/comments/comment/comment.component.scss
@@ -37,9 +37,6 @@
   }
 }
 
-.reply-list {
-
-  button {
-    margin: 0 0 24px 5px;
-  }
+button.reply-list {
+  margin: 0 0 24px 5px;
 }
